--- a/view/layout/style/style.css
+++ b/view/layout/style/style.css
@@ -99,7 +99,7 @@ body{
     margin-right: 5px;
   }
   
-  .dropdown a:hover {background-color: #ddd;}
+  .dropdown a:hover {background-color: #f5f5f5;}
   
   .show {display: block;}
 
@@ -108,7 +108,6 @@ body {
 }
 
 header{
-    background-color: white;
     padding: 10px;
     padding-top: 10px;  
 }
