--- a/view/layout/style/styleAdmin.css
+++ b/view/layout/style/styleAdmin.css
@@ -56,12 +56,11 @@ footer {
 }
 
 
-body {
+body {  
 	background-color: #ebebeb;
-}
+} 
 
 header{
-    padding: 10px;
     padding-top: 10px;  
 }
 
@@ -110,6 +109,11 @@ header{
     background-color:white;
     padding: 10px;
 }
+
+body {
+	background-color: #ebebeb;
+}
+
 
 
 ul {
