--- a/view/layout/style/styleAdmin.css
+++ b/view/layout/style/styleAdmin.css
@@ -147,6 +147,6 @@ ul {
 
   table, tr, th, td {
     padding: 5px;
-    border: 1px solid rgb(38, 81, 121);
-    width: 100%;
+    border: 1px solid black;  
+    width: 100%;  
   }
