--- a/view/layout/style/style.css
+++ b/view/layout/style/style.css
@@ -52,7 +52,6 @@ footer {
     margin-top: 2%;
     color: white;
     font-weight: 300;
-    background-color: #615556;
 }
 
 
@@ -64,12 +63,11 @@ body{
 
 
 .dropbtn {
-    color: black;
+    color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
-    background-color: white;
   }
   
   .dropdown {
@@ -80,12 +78,11 @@ body{
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    right: 0;
+    background-color: #f9f9f9;
     min-width: 160px;
-    overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    
   }
   
   .dropdown-content a {
@@ -99,12 +96,14 @@ body{
     margin-right: 5px;
   }
   
-  .dropdown a:hover {background-color: #f5f5f5;}
+  .dropdown-content a:hover {background-color: #f1f1f1;}
   
-  .show {display: block;}
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 
 body {
-	background-color: #ebebeb;
+	background-color: #f9f9f9;
 }
 
 header{
