--- a/view/layout/style/style.css
+++ b/view/layout/style/style.css
@@ -1,112 +1,112 @@
 .login {
-    margin: 1%;
-    border-radius: 30px;
-    font-size: 15px;
-    color: white;
+  margin: 1%;
+  border-radius: 30px;
+  font-size: 15px;
+  color: white;
 }
 
 
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    padding-top: 60px;
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  padding-top: 60px;
 }
 
 .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto;
-    border: 1px solid #888;
-    width: 30%;
-    padding: 10px;
+  background-color: #fefefe;
+  margin: 5% auto 15% auto;
+  border: 1px solid #888;
+  width: 30%;
+  padding: 10px;
 }
 
 .container input[type=text],
 input[type=password] {
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin: 8px 0;
-    display: inline-block;
-    border: none;
-    border-collapse: collapse;
-    border-bottom: 1px solid #888;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 8px 0;
+  display: inline-block;
+  border: none;
+  border-collapse: collapse;
+  border-bottom: 1px solid #888;
 }
 
 
 .close:hover,
 .close:focus {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 footer {
-    text-align: center;
-    padding: 0.5%;
-    margin-top: 2%;
-    color: white;
-    font-weight: 300;
+  text-align: center;
+  padding: 0.5%;
+  margin-top: 2%;
+  color: white;
+  font-weight: 300;
 }
 
 
-/* body{
-    padding-top: 10%;
-    padding-bottom: 30px;
-} */
+body{
+  padding-top: 10%;
+  padding-bottom: 30px;
+}
 
 
 
 .dropbtn {
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    right: 0;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    text-decoration: none;
-    display: block;
-    width: 250px;
-    margin-left: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-right: 5px;
-  }
-  
-  .dropdown-content a:hover {background-color: #f1f1f1;}
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  text-decoration: none;
+  display: block;
+  width: 250px;
+  margin-left: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-right: 5px;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 body {
-	background-color: #f9f9f9;
+background-color: #f9f9f9;
 }
 
 header{
-    padding: 10px;
-    padding-top: 10px;  
+  padding: 10px;
+  padding-top: 10px;  
 }
